fix: z-index of message action
This should show above the blue separator, if any shown

--- a/src/messaging/components/message/message.css
+++ b/src/messaging/components/message/message.css
@@ -211,6 +211,7 @@
   position: absolute;
   top: -5px;
   right: calc(var(--message-line-padding-sides-default) - 1px);
+  z-index: 1;
   display: none;
 }
 
